package com.devfrota.iphonedio.controller.architecture.work.interfaces;

import com.devfrota.iphonedio.controller.architecture.model.pacbrowser.Bookmark;

import java.util.List;

public interface IBrowser {
    List<Bookmark> getBookmarkList();

}

