package com.devfrota.iphonedio.controller.architecture.work.interfaces;


import com.devfrota.iphonedio.controller.architecture.model.pacplayer.Media;

import java.util.List;

public interface IPlayer {
    List<Media> getPlayList();

}

