package com.devfrota.iphonedio.controller.architecture.work.interfaces;

import com.devfrota.iphonedio.controller.architecture.model.pactelephone.Contact;
import java.util.List;

public interface ITelephone {

        List<Contact> getContactList();


}
