package com.devfrota.iphonedio.principal;


import static com.devfrota.iphonedio.controller.architecture.work.factories.ServiceFactory.sView;

public class IphoneApp {

    public static void main(String[] args) {
        sView().start();
    }
}
